fix table overflow

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 .paper {
   margin-top: 35px;
+  overflow: auto
 }
 
 .sidebar {
